--- a/shop/ClientApp/src/app/footer/footer.component.html
+++ b/shop/ClientApp/src/app/footer/footer.component.html
@@ -1,6 +1,8 @@
 <footer style="background-color: white;">
-    <div class="main_content">
+    <div class="main_content" style="border-top: 1px solid #c4c4c4;padding-top: 20px ;">
+       
         <div class="row">
+           
             <div class="col-7">
                 <p>Сообщества OLX.ua в социальных сетях</p>
                 <p class="mb-0">Сервис объявлений № 1 в Украине</p>
@@ -43,7 +45,7 @@
         <hr>
         <div class="row">
             <div class="col-2">
-                <span style="padding: 15px;background-color: turquoise;">OLX</span>
+                <img width="100px" src="https://static-olxeu.akamaized.net/static/olxua/packed/font/2ff1f8736a27eb257f9688cf3b21332f49.svg">
             </div>
             <div class="col-3">
                 <ul style="list-style: none;margin: 0;padding: 0;">
