--- a/shop/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/shop/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -14,7 +14,7 @@
               <span class="ml-2">Мой профиль</span></a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-light btn btn-dark" [routerLink]="['/profile']">+ Подать объявление</a>
+            <a class="nav-link text-light btn btn-dark" [routerLink]="['/post-new-ad']">+ Подать объявление</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a href="#">язык</a>
