--- a/shop/ClientApp/src/app/home/home.component.css
+++ b/shop/ClientApp/src/app/home/home.component.css
@@ -45,6 +45,18 @@
     margin:0;
     padding: 0;
     list-style: none;
+    
+}
+
+.list_of_Items ul li{
+    margin-top: 30px;
+    padding-right: 10px;
+    width: 30%;
+    
+}
+
+.list_of_Items ul li i, .list_of_Items i{
+    margin-right: 5px;
 }
 
 .list_of_Items span{
